[metadata]
name = timeseriesql
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
author = Michael Beale
author_email = michael.beale@gmail.com
description = A Pythonic query language for time series data
long_description = 
license = BSD 3-Clause
url = https://github.com/mbeale/timeseriesql
edit_on_github = False
github_project = mbeale/timeseriesql
python_requires = ">=3.7"

[options]
zip_safe = False
use_2to3 = False

[options.package_data]
* = *.c
timeseriesql = data/*

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[flake8]
exclude = extern,sphinx,*parsetab.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,docs/conf.py,setup.py
